--- a/AvioProWeb/AvioProWeb/AvioProWeb.csproj
+++ b/AvioProWeb/AvioProWeb/AvioProWeb.csproj
@@ -333,6 +333,44 @@
     <Content Include="Views\Shared\Aero_TurbineOil_560_b.cshtml" />
     <Content Include="Views\Shared\Aero_TurbineOil_750.cshtml" />
     <Content Include="Views\Shared\Aero_TurbineOil_Ascender.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mpolyurethaneprotectivetape8544.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mpolyurethaneprotectivetape8547.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mpolyurethaneprotectivetape8657.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mpolyurethaneprotectivetape8658dl.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mpolyurethaneprotectivetape8663dl.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mpolyurethaneprotectivetape8664hs.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mpolyurethaneprotectivetape8671.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mpolyurethaneprotectivetape8673.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mpolyurethaneprotectivetape8681hs.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mpolyurethaneprotectivetape8730na.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mpolyurethaneprotectivetape8734na.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mprotectivetapeapplicationsolution.cshtml" />
+    <Content Include="Views\Shared\Tapes_3msadhesiveec1300.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldadhesivesealantec3537naba.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldbracketbondingadhesiveec7202.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldepoxyadhesiveec1469.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldepoxyadhesiveec1751ba.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldepoxyadhesiveec1838.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldepoxyadhesiveec2216bagray.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldepoxyadhesiveec2216batranslucent.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldepoxyadhesiveec2792ba.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldepoxyadhesiveec3501ba.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldepoxyadhesiveec3531bafr.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldepoxyadhesiveec3537naba.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldneoprenehighper1357.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldrepairpasterp2220.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldstructuraladhesive72462bafst.cshtml" />
+    <Content Include="Views\Shared\Tapes_3MScotchWeldStructuralAdhesiveEC1458.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldstructuraladhesiveec3984.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldstructuraladhesiveec7236.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldstructuraladhesivefilmaf15.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldstructuraladhesivefilmaf3185.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldstructuraladhesivefilmaf555.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldstructuraladhesivesec3964.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldurethaneadhesiveec3532ba.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldurethaneadhesiveec3535ba.cshtml" />
+    <Content Include="Views\Shared\Tapes_3mscotchweldurethaneadhesiveec3587ba.cshtml" />
+    <Content Include="Views\Shared\Tapes_protectivetape8663.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
